Added form, fields, and radio buttons

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,10 @@
 
+ 
 * {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
