--- a/assets/style.css
+++ b/assets/style.css
@@ -38,16 +38,19 @@ header nav {
 
 }
 
-header nav ul li {
-  display: inline;
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 
 header nav ul li a {
   margin: 0 30px;
   font-weight: lighter;
-  font-size: 22px;
+  font-size: 1.55vw;
 }
-
 body {
   /* more on this crazy alphanumerical value in a minute! */
   color: #39a6b2;
@@ -146,7 +149,7 @@ section {
 
 .steps-img {
   width: 15%;
-  margin: 10px 0; 
+  margin: 10px 0;
 }
 
 .steps h3 {
@@ -158,7 +161,7 @@ section {
 
 .steps p {
   color: #39a6b2;
-  font-size:23px
+  font-size: 23px
 }
 
 .steps span {
@@ -191,20 +194,20 @@ section {
   margin: 0 auto 30px auto;
   background: #024e76;
   color: #fce138;
-  overflow:auto
+  overflow: auto
 }
 
 .trainer img {
   width: 35%;
   float: left;
-  overflow:auto
+  overflow: auto
 }
 
 .trainer-bio {
   padding: 35px;
   float: left;
   width: 65%;
-  overflow:auto
+  overflow: auto
 }
 
 .text-left {
@@ -274,7 +277,8 @@ section {
   font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
+.contact-info p,
+.contact-info address {
   margin: 20px 0;
   line-height: 1.5;
   font-size: 20px;
@@ -283,4 +287,3 @@ section {
 
 
 /* REACH OUT STYLES END */
-
