--- a/assets/style.css
+++ b/assets/style.css
@@ -51,6 +51,7 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 1.55vw;
 }
+
 body {
   /* more on this crazy alphanumerical value in a minute! */
   color: #39a6b2;
@@ -59,20 +60,23 @@ body {
 }
 
 footer {
+  display: flex;
   background: #fce138;
   width: 100%;
   padding: 40px 35px;
+  justify-content: space-between;
+
+flex-wrap: wrap;
 }
 
 footer h2 {
-  display: inline;
+
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 
 footer div {
-  float: right;
   line-height: 1.5;
   text-align: right;
 }
@@ -103,6 +107,9 @@ section {
   border-color: #024e76;
   position: absolute;
   right: 500px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 
 }
 
@@ -122,6 +129,26 @@ section {
 
 .hero-form label {
   margin: 0 5px
+}
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+  font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+
+  
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
 }
 
 /* Hero Style End */
