--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,6 @@ header nav ul li a {
 }
 
 body {
-  /* more on this crazy alphanumerical value in a minute! */
   color: #39a6b2;
   font-family: Helvetica, Arial, sans-serif;
 
@@ -65,8 +64,7 @@ footer {
   width: 100%;
   padding: 40px 35px;
   justify-content: space-between;
-
-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 footer h2 {
@@ -85,6 +83,9 @@ footer a {
   color: #024e76;
 }
 
+/*End Footer*/
+
+
 section {
   padding: 60px;
 
@@ -92,15 +93,18 @@ section {
 
 .hero {
   background-image: url("./images/hero-bg.jpg");
-  height: 600px;
   background-size: cover;
   background-position: center;
+  justify-content: center;
+  display:flex;
+  flex-wrap: wrap;
 }
 
 .hero-form {
   background: #fce138;
   padding: 20px;
-  width: 500px;
+  width: 40%;
+  margin:3.5; 
   color: #024e76;
   border-style: solid;
   border-width: 3px;
@@ -115,6 +119,7 @@ section {
 
 .hero-form p {
   margin: 5px 0 15px 0;
+  
 }
 
 .form-input {
@@ -138,11 +143,9 @@ section {
   color: #fff;
   font-size: 18px;
   line-height: 1.3;
-  font-style: italic;
-    font-size: 55px;
-    color: #fce138;
-
+  font-size: 18 px;
   
+
 }
 
 .hero-cta h2 {
@@ -153,9 +156,6 @@ section {
 
 /* Hero Style End */
 
-.intro {
-  text-align: center;
-}
 
 .intro p {
   line-height: 1.7;
@@ -166,7 +166,6 @@ section {
 }
 
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -198,9 +197,6 @@ section {
 .section-title {
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
 }
 
@@ -212,9 +208,7 @@ section {
   border-color: #39a6b2;
 }
 
-.trainers {
-  text-align: center;
-}
+.trainers {}
 
 .trainer {
   width: 900px;
@@ -245,6 +239,10 @@ section {
   text-align: right;
 }
 
+.flex-row {
+  display: flex;
+}
+
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
@@ -265,14 +263,17 @@ section {
   font-size: 55px;
   display: inline-block;
   padding: 0 100px 20px 100px;
+  padding-bottom: 20px;
+  text-align: center;
   border-bottom: 3px solid;
+  margin: 0 auto 35px auto;
   margin-bottom: 35px;
+  width: 50%;
   color: #024e76;
 }
 
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
