--- a/assets/style.css
+++ b/assets/style.css
@@ -165,33 +165,36 @@ section {
   margin: 0 auto;
 }
 
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
 .steps {
   background: #fce138;
 }
 
-.steps div {
-  margin-bottom: 80px;
-}
-
-.steps-img {
-  width: 15%;
-  margin: 10px 0;
-}
-
-.steps h3 {
+.step h3 {
   color: #024e76;
   font-size: 46px;
-  margin-top: 10px;
+}
+ 
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
 }
 
-
-.steps p {
+.step-text p {
   color: #39a6b2;
-  font-size: 23px
-}
-
-.steps span {
-  font-size: 38px;
+  font-size: 18px
 }
 
 .section-title {
@@ -208,7 +211,9 @@ section {
   border-color: #39a6b2;
 }
 
-.trainers {}
+.trainers {
+ 
+}
 
 .trainer {
   width: 900px;
@@ -261,15 +266,13 @@ section {
 
 .section-title {
   font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
-  padding-bottom: 20px;
   text-align: center;
   border-bottom: 3px solid;
   margin: 0 auto 35px auto;
   margin-bottom: 35px;
   width: 50%;
   color: #024e76;
+  padding-bottom: 20%;
 }
 
 /* REACH OUT STYLES START */
