--- a/assets/style.css
+++ b/assets/style.css
@@ -47,7 +47,7 @@ header nav ul {
 }
 
 header nav ul li a {
-  margin: 0 30px;
+  padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
 }
@@ -98,6 +98,7 @@ section {
   justify-content: center;
   display:flex;
   flex-wrap: wrap;
+  align-items: flex-start
 }
 
 .hero-form {
@@ -142,7 +143,7 @@ section {
   margin: 3.5%;
   color: #fff;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.2;
   font-size: 18 px;
   
 
@@ -198,7 +199,7 @@ section {
 }
 
 .section-title {
-  font-size: 55px;
+  font-size: 48px;
   color: #024e76;
   border-bottom: 3px solid;
 }
@@ -318,3 +319,7 @@ section {
 
 
 /* REACH OUT STYLES END */
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+}
