--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
 
+}
+/*header*/
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
@@ -19,10 +24,6 @@ header h1 {
   margin: 0;
 }
 
-.hero-form h3 {
-  font-size: 24px;
-  margin: 0;
-}
 
 h3 {
   margin: "0"
@@ -51,13 +52,9 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 1.55vw;
 }
+/*End of header*/
 
-body {
-  color: #39a6b2;
-  font-family: Helvetica, Arial, sans-serif;
-
-}
-
+/*footer*/
 footer {
   display: flex;
   background: #fce138;
@@ -85,56 +82,20 @@ footer a {
 
 /*End Footer*/
 
-
+/*styles section tags*/
 section {
   padding: 60px;
 
 }
-
+/*Hero Style Start*/
 .hero {
-  background-image: url("./images/hero-bg.jpg");
+  background-image: url('./images/hero-bg.jpg');
   background-size: cover;
   background-position: center;
-  justify-content: center;
-  display:flex;
-  flex-wrap: wrap;
-  align-items: flex-start
-}
-
-.hero-form {
-  background: #fce138;
-  padding: 20px;
-  width: 40%;
-  margin:3.5; 
-  color: #024e76;
-  border-style: solid;
-  border-width: 3px;
-  border-color: #024e76;
-  position: absolute;
-  right: 500px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-
-}
-
-.hero-form p {
-  margin: 5px 0 15px 0;
-  
-}
-
-.form-input {
-  border: 1px solid #024e76;
-  display: block;
-  padding: 7px 15px;
-  font-size: 16px;
-  color: #024e76;
-  width: 100%;
-  margin-bottom: 15px;
-}
-
-.hero-form label {
-  margin: 0 5px
+  align-items: flex-start;
 }
 
 .hero-cta {
@@ -144,9 +105,6 @@ section {
   color: #fff;
   font-size: 18px;
   line-height: 1.2;
-  font-size: 18 px;
-  
-
 }
 
 .hero-cta h2 {
@@ -155,15 +113,84 @@ section {
   color: #fce138;
 }
 
+.hero-form {
+  border: 3px solid #024e76;
+  background-color: #fce138;
+  padding: 20px;
+  color: #024e76;
+  width: 40%;
+  margin: 3.5%;
+}
+
+.hero-form h3 {
+  font-size: 24px;
+  margin: 0;
+}
+.hero-form p {
+  margin: 5px 0 15px 0;
+}
+
+.form-input {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px; 
+}
+
+.hero-form label {
+  margin: 0 5px;
+}
+
+.hero-form button {
+  color: #fce138;
+  background-color: #024e76;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+} 
+
 /* Hero Style End */
 
+
+/* SECTION TITLE STYLES START */
+.section-title {
+  font-size: 48px;
+  border-bottom: 3px solid;
+  color: #024e76;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+/* SECTION TITLE STYLES END */
+
+/* WHAT WE DO STYLES */
 
 .intro p {
   line-height: 1.7;
   color: #39a6b2;
   width: 80%;
-  font-size: 20px;
   margin: 0 auto;
+  font-size: 20px;
+  text-align: center;
+}
+/* WHAT YOU DO STYLES END */
+
+
+/* WHAT YOU DO STYLES START */
+.steps { 
+  background: #fce138;
 }
 
 .step {
@@ -175,68 +202,156 @@ section {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-
-}
-
-.steps {
-  background: #fce138;
 }
 
 .step h3 {
   color: #024e76;
   font-size: 46px;
+  flex: 1 30%;
 }
- 
+
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+
+.step-img img {
+  max-width: 100%;
+}
+
+.step-text {
+  flex: 12;
+}
+
+.step-text p {
+  color: #39a6b2;
+  font-size: 18px;
+}
+
 .step-text h4 {
   font-size: 26px;
   line-height: 1.5;
   color: #024e76;
 }
 
-.step-text p {
-  color: #39a6b2;
-  font-size: 18px
-}
+/* WHAT YOU DO STYLES END */
 
-.section-title {
-  font-size: 48px;
-  color: #024e76;
-  border-bottom: 3px solid;
-}
-
-.primary-border {
-  border-color: #fce138;
-}
-
-.secondary-border {
-  border-color: #39a6b2;
-}
-
+/* MEET THE TRAINERS START */
 .trainers {
- 
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .trainer {
-  width: 900px;
-  margin: 0 auto 30px auto;
+  margin: 20px;
+  flex: 1;
   background: #024e76;
   color: #fce138;
-  overflow: auto
 }
 
 .trainer img {
-  width: 35%;
-  float: left;
-  overflow: auto
+  width: 100%;
 }
 
 .trainer-bio {
-  padding: 35px;
-  float: left;
-  width: 65%;
-  overflow: auto
+  padding: 25px;
+  line-height: 1.3;
 }
 
+.trainer-bio h3 {
+  font-size: 28px;
+}
+
+.trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 22px;
+  margin-bottom: 15px;
+}
+
+.trainer-bio p {
+  font-size: 17px;
+}
+/* TRAINER STYLES END */
+
+/* REACH OUT STYLES START */
+.contact {
+  background: #024e76;
+}
+
+.contact h2 {
+  color: #fce138;
+}
+
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
+}
+
+.contact-info iframe {
+  height: 400px;
+}
+
+.contact-info div {
+  color: white;
+}
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 16px;
+  font-style: normal;
+}
+
+.contact-form input, .contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+
+/* REACH OUT STYLES END */
+
+/* UTILITIES */
 .text-left {
   text-align: left;
 }
@@ -248,77 +363,6 @@ section {
 .flex-row {
   display: flex;
 }
-
-.trainer-bio h3 {
-  font-size: 32px;
-  margin-bottom: 8px;
-}
-
-.trainer-bio h4 {
-  font-weight: lighter;
-  font-size: 26px;
-  margin-bottom: 25px;
-}
-
-.trainer-bio p {
-  font-size: 17px;
-  line-height: 1.3;
-}
-
-.section-title {
-  font-size: 55px;
-  text-align: center;
-  border-bottom: 3px solid;
-  margin: 0 auto 35px auto;
-  margin-bottom: 35px;
-  width: 50%;
-  color: #024e76;
-  padding-bottom: 20%;
-}
-
-/* REACH OUT STYLES START */
-.contact {
-  background: #024e76;
-}
-
-.contact h2 {
-  color: #fce138;
-}
-
-.contact-info iframe {
-  width: 400px;
-  height: 400px;
-}
-
-.contact-info a {
-  color: #fce138;
-}
-
-
-.contact-info div {
-  width: 410px;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  margin: 30px 0 0 60px;
-  color: white;
-}
-
-.contact-info h3 {
-  color: #fce138;
-  font-size: 32px;
-}
-
-.contact-info p,
-.contact-info address {
-  margin: 20px 0;
-  line-height: 1.5;
-  font-size: 20px;
-  font-style: normal;
-}
-
-
-/* REACH OUT STYLES END */
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
@@ -367,7 +411,7 @@ section {
     flex: 1 100%;
   }
 }
-
+/*For tablets*/
 @media screen and (max-width: 768px) {
   section {
     padding: 30px 15px;
@@ -394,7 +438,7 @@ section {
     flex: 100%;  
   }
 }
-
+/*For phones*/
 @media screen and (max-width: 575px) {
 
   .hero-form button {
